# virgo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_proto.py  generate_proto.sh  test.py  utils.py
.github/workflows/: cmake-ubuntu-gcc  cmake-ubuntu-gcc-test.yml  cmake-ubuntu-gcc.yml
cmake/: FindBoost.cmake
include/: aquarius_protocol.hpp  message.hpp  reflection.hpp  serialize.hpp
include/aquarius_protocol/: basic_flex_buffer.hpp  basic_header.hpp  basic_http_header.hpp  basic_http_message.hpp  basic_message.hpp  basic_request.hpp  basic_response.hpp  basic_rpc.hpp  basic_tcp_header.hpp  basic_tcp_message.hpp  binary.hpp  concepts.hpp  custom_tcp_header.hpp  header.hpp  http_filed_type.hpp  http_header_fileds.hpp  http_method.hpp  http_request.hpp  http_response.hpp  http_status.hpp  http_version.hpp  json.hpp  layer_tcp_header.hpp  member_bind_helper.hpp  package_processor.hpp  reflection.hpp  tcp_header.hpp  tcp_request.hpp  tcp_response.hpp
include/detail/: archive.hpp  basic_message.hpp  basic_request.hpp  basic_response.hpp  binary.hpp  concepts.hpp  fake_object.hpp  header.hpp  member_bind_helper.hpp  reflect.hpp  reflection.hpp
include/message/: basic_message.hpp  basic_request.hpp  basic_response.hpp  header.hpp  proto_header.hpp
include/reflection/: fake_object.hpp  reflect.hpp  (+1 more)
proto_define/: proto_user.py
test/: CMakelists.txt  protocol.cpp  test.cpp  test.virgo  test.virgo.cpp  test.virgo.h  test_lazytool.cpp
tool/: cpp_generate.cpp  cpp_generate.h  lazytool.cpp  parse.cpp  parse.h  statement.cpp  statement.h  statement.hpp
(+45 files in other folders)
